# ComfyUI_NYJY

./: .gitignore  README.md  __init__.py  config.json  config.json.template  install.bat  pyproject.toml  requirements.txt
docs/: bailian.md  civitaiprompt.md  joycaption.md  joytag.md  translate.md  update_log.md
models/joytag/: README.md  model.safetensors
nodes/: Translate.py  civitai_prompt.py  classes.py  config.py  fluxpro.py  image_tools.py  number_tools.py  test.py  utils.py
nodes/AIModelBridge/: BridgeNode.py  api.py  bailian.py  definition.py  volcengine.py
nodes/JoyCaption/: JoyCaption.py  jc2_online.py  joyCaptionAlphaTwo.py.bak  online.py
nodes/JoyCaption/wpkklhc6/: config.yaml
nodes/JoyTag/: JoyTag.py  filter_tags.json  models.py
nodes/logics/: array_fn.py  json_fn.py  strings_fn.py  type_tools.py
web/css/: nyjy.css
web/js/: jsnodes.js
